# example-cpp

./: CMakeLists.txt  main.cpp  resource.txt
part/cast/: cast.cpp  cast.h
part/cls/: cls.cpp  cls.h  inherit.cpp
part/collections/: array.cpp  collections.h  linked_list.cpp  linked_list.h  string.cpp  struct.cpp  tree.cpp  tree.h  vector.cpp  vector.h
part/dtypes/: dtypes.cpp  dtypes.h
part/dynamic_alloc/: dynamic_alloc.cpp  dynamic_alloc.h
part/exception/: exception.cpp  exception.h
part/interface/: interface.cpp  interface.h
part/ops/: arithmetic_op.cpp  bit_op.cpp  logical_op.cpp  ops.h  trinary_op.cpp
part/pointer/: pointer.cpp  smart_ptr.cpp  smart_ptr.h
part/statements/: condition.cpp  loop.cpp  statements.h
part/threading/: consumer_producer.cpp  threading.cpp  threading.h
part/var/: var.cpp  var.h
utils/: func.cpp  func.h
